--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@google/genai": "^1.11.0",
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^12.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.536.0",
+    "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
