--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.536.0",
     "razorpay": "^2.9.6",
