--- a/.env
+++ b/.env
@@ -1,1 +1,27 @@
+# Firebase Configuration
+VITE_FIREBASE_API_KEY="AIzaSyAd9NpMcYgQ18uWhfIT7MBwh_KNprdZLoQ"
+VITE_FIREBASE_AUTH_DOMAIN="urban-park-d8825.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="urban-park-d8825"
+VITE_FIREBASE_STORAGE_BUCKET="urban-park-d8825.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="258352254915"
+VITE_FIREBASE_APP_ID="1:258352254915:web:2487d3a17efa302fd8b776"
+VITE_FIREBASE_MEASUREMENT_ID="G-8BB8ZTJMK5"
+
+
+# Razorpay Configuration
+VITE_RAZORPAY_KEY_ID="rzp_test_rN3ysbintURr2f"
+RAZORPAY_KEY_ID="rzp_test_rN3ysbintURr2f"
+RAZORPAY_KEY_SECRET='0BhzmL3LO4S2BoNdOoxt5YkM'
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER="urbparkticketing@gmail.com"
+EMAIL_PASSWORD="venn lnpt wriu jqem"
+
+# Gemini AI Configuration
 VITE_GEMINI_API_KEY="AIzaSyDbXhxY3Z2m8YHSz3Nuu8gTc8ZQOzTBOVA"
+
+# Server Configuration
+PORT=3000
+NODE_ENV=development
