--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^13.4.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.536.0",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
@@ -43,6 +44,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.3.5",
-    "vite": "^7.1.1"
+    "vite": "^7.1.2"
   }
 }
